# realtime-edge-vision

./: .gitignore  PROJECT_SCOPED_EDIT  PROJECT_SUMMARY.txt  README.md  SETUP_GUIDE.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detection.cpp  edge_detection.h  native-lib.cpp
app/src/main/java/com/flamapp/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/flamapp/camera/: CameraManager.kt
app/src/main/java/com/flamapp/gl/: TextureRenderer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
